--- a/be-elysia/package.json
+++ b/be-elysia/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@elysiajs/cors": "^1.0.0",
     "@elysiajs/swagger": "^1.3.1",
+    "compression": "^1.8.1",
     "drizzle-orm": "^0.45.1",
     "elysia": "^1.0.0",
     "ioredis": "^5.8.2",
