Improve testing and readability

--- a/be-elysia/package.json
+++ b/be-elysia/package.json
@@ -6,6 +6,11 @@
     "dev": "bun run --watch src/index.ts",
     "start": "bun run src/index.ts",
     "build": "bun build src/index.ts --outdir ./dist --target bun",
+    "test": "bun test",
+    "test:coverage": "bun test --coverage",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --write src",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -22,8 +27,12 @@
     "mysql2": "^3.16.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "bun-types": "latest",
     "drizzle-kit": "^0.31.8",
-    "typescript": "^5.0.0"
+    "eslint": "^9.39.2",
+    "prettier": "^3.7.4",
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.50.1"
   }
 }
