--- a/fe-vue/package.json
+++ b/fe-vue/package.json
@@ -7,7 +7,10 @@
     "build": "bunx vue-tsc && bunx --bun vite build",
     "preview": "bunx --bun vite preview",
     "test": "bun test",
-    "test:watch": "bun test --watch"
+    "test:watch": "bun test --watch",
+    "lint": "eslint src --ext .ts,.vue",
+    "lint:fix": "eslint src --ext .ts,.vue --fix",
+    "format": "prettier --write src"
   },
   "dependencies": {
     "lucide-vue-next": "^0.300.0",
@@ -15,13 +18,18 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@vitejs/plugin-vue": "^5.0.0",
     "autoprefixer": "^10.4.0",
     "bun-types": "^1.3.5",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.6.2",
     "postcss": "^8.4.0",
+    "prettier": "^3.7.4",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.50.1",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.0"
+    "vue-tsc": "^3.2.1"
   }
 }
