--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,44 @@ jobs:
         run: bun run build
         working-directory: ./fe-vue
 
+  e2e-tests:
+    name: E2E Tests (Playwright)
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install
+        working-directory: ./fe-vue
+
+      - name: Install Playwright browsers
+        run: bunx playwright install --with-deps chromium
+        working-directory: ./fe-vue
+
+      - name: Build app
+        run: bun run build
+        working-directory: ./fe-vue
+
+      - name: Run E2E tests
+        run: bun run test:e2e --project=chromium
+        working-directory: ./fe-vue
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: playwright-report
+          path: ./fe-vue/playwright-report/
+          retention-days: 7
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
