--- a/fe-vue/package.json
+++ b/fe-vue/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "dev": "bunx --bun vite",
     "build": "bunx vue-tsc && bunx --bun vite build",
-    "preview": "bunx --bun vite preview",
+    "preview": "bunx --bun vite preview --port 8080",
     "test": "bun test",
     "test:watch": "bun test --watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
     "lint": "eslint src --ext .ts,.vue",
     "lint:fix": "eslint src --ext .ts,.vue --fix",
     "format": "prettier --write src"
@@ -19,6 +22,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^5.0.0",
     "autoprefixer": "^10.4.0",
     "bun-types": "^1.3.5",
