--- a/fe-vue/package.json
+++ b/fe-vue/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "lucide-vue-next": "^0.300.0",
     "vue": "^3.4.0",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue-virtual-scroller": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
