--- a/fe-vue/package.json
+++ b/fe-vue/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.92.1",
     "lucide-vue-next": "^0.300.0",
     "vue": "^3.4.0",
     "vue-router": "^4.6.4",
