--- a/fe-vue/package.json
+++ b/fe-vue/package.json
@@ -27,10 +27,12 @@
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^5.0.0",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.0",
     "bun-types": "^1.3.5",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.6.2",
+    "happy-dom": "^20.0.11",
     "postcss": "^8.4.0",
     "prettier": "^3.7.4",
     "tailwindcss": "^3.4.0",
